--- a/app/views/index.html
+++ b/app/views/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>Note Wrangler</h1>
-    <div ng-view></div>
+    <div ng-view class="container-fluid"></div>
   </body>
 
   <!-- vendor -->
@@ -22,9 +22,11 @@
   <script src="assets/javascript/routes.js"></script>
   <!-- Directives -->
   <!-- Controllers -->
-  <script src="assets/javascript/controllers.NotesCreateController.js"></script>
-  <script src="assets/javascript/controllers.NotesEditController.js"></script>
-  <script src="assets/javascript/controllers.NotesShowController.js"></script>
-  <script src="assets/javascript/controllers.NotesIndexController.js"></script>
+  <script src="assets/javascript/controllers/NotesCreateController.js"></script>
+  <script src="assets/javascript/controllers/NotesEditController.js"></script>
+  <script src="assets/javascript/controllers/NotesShowController.js"></script>
+  <script src="assets/javascript/controllers/NotesIndexController.js"></script>
   <!-- Services -->
+  <script src="assets/javascript/services/notes.js"></script>
+
 </html>
