--- a/app/assets/templates/notes/index.html
+++ b/app/assets/templates/notes/index.html
@@ -1,4 +1,4 @@
-<h1>Notes Index</h1>
+<h1>Notes <a class="btn btn-default" ng-href="#/notes/{{note-id}}}/new">New Note</a></h1>
 
 <div class="row">
   <div ng-repeat="note in notes" class="col-sm-6">
