--- a/app/views/index.html
+++ b/app/views/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="assets/styles/bootstrap-theme.css"></link>
   </head>
   <body>
-    <h1>Note Wrangler</h1>
-    <div ng-view class="container-fluid"></div>
+    <nw-page-nav></nw-page-nav>
+    <div ng-view class="container"></div>
   </body>
 
   <!-- vendor -->
@@ -21,6 +21,7 @@
   <script src="assets/javascript/app.js"></script>
   <script src="assets/javascript/routes.js"></script>
   <!-- Directives -->
+  <script src="assets/javascript/directives/nwPageNav.js"></script>
   <!-- Controllers -->
   <script src="assets/javascript/controllers/NotesCreateController.js"></script>
   <script src="assets/javascript/controllers/NotesEditController.js"></script>
@@ -30,5 +31,6 @@
   <script src="assets/javascript/controllers/UsersIndexController.js"></script>
   <!-- Services -->
   <script src="assets/javascript/services/users.js"></script>
+  <script src="assets/javascript/services/notes.js"></script>
 
 </html>
