--- a/app/assets/templates/directives/nwPageNav.html
+++ b/app/assets/templates/directives/nwPageNav.html
@@ -1,13 +1,5 @@
-<nav class="navbar navbar-default">
-  <div class="container">
-    <div class="navbar-header">
-      <div class="navbar-brand">
-        <a href="/#/">NoteWrangler</a>
-      </div>
-      <ul class="nav navbar-nav">
-        <li><a href="#/notes">Notes</a></li>
-        <li><a href="#/users">Users</a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
+
+<ul class="nav navbar-nav">
+  <li ng-class="{'active' : isPage('notes')}"><a href="#/notes">Notes</a></li>
+  <li ng-class="{'active' : isPage('users')}"><a href="#/users">Users</a></li>
+</ul>
