create category service

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -41,5 +41,6 @@
   <!-- Services -->
   <script src="assets/javascript/services/users.js"></script>
   <script src="assets/javascript/services/notes.js"></script>
+  <script src="assets/javascript/services/category.js"></script>
 
 </html>
