--- a/app/assets/templates/notes/index.html
+++ b/app/assets/templates/notes/index.html
@@ -1,6 +1,7 @@
 <h1>Notes <a class="btn btn-default" ng-href="#/notes/new">New Note</a></h1>
 
 <div class="row">
+  <nw-category-selector ng-model="search.category"></nw-category-selector>
   <div ng-repeat="note in notes" class="col-sm-6">
     <h2><a ng-href="#/notes/{{note.id}}">{{note.title}}</a></h2>
     <p>{{note.description}}</p>
