--- a/app/views/index.html
+++ b/app/views/index.html
@@ -31,6 +31,7 @@
   <script src="assets/javascript/routes.js"></script>
   <!-- Directives -->
   <script src="assets/javascript/directives/nwPageNav.js"></script>
+  <script src="assets/javascript/directives/nwCategorySelector.js"></script>
   <!-- Controllers -->
   <script src="assets/javascript/controllers/NotesCreateController.js"></script>
   <script src="assets/javascript/controllers/NotesEditController.js"></script>
