--- a/app/assets/templates/directives/nwCategorySelector.html
+++ b/app/assets/templates/directives/nwCategorySelector.html
@@ -1,3 +1,3 @@
 <div class="nw-category-selector btn-group" role="group">
-  <a href="", ng-repeat="category in categories" class="btn btn-default">{{category.name}}</a>
+  <a href="" ng-click="toggleCategory(category)" ng-class="{'active' : isActive(category)}" ng-repeat="category in categories" class="btn btn-default">{{category.name}}</a>
 </div>
