Display notes based on selected category

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -29,9 +29,11 @@
   <!-- App -->
   <script src="assets/javascript/app.js"></script>
   <script src="assets/javascript/routes.js"></script>
+
   <!-- Directives -->
   <script src="assets/javascript/directives/nwPageNav.js"></script>
   <script src="assets/javascript/directives/nwCategorySelector.js"></script>
+  
   <!-- Controllers -->
   <script src="assets/javascript/controllers/NotesCreateController.js"></script>
   <script src="assets/javascript/controllers/NotesEditController.js"></script>
@@ -39,6 +41,10 @@
   <script src="assets/javascript/controllers/NotesIndexController.js"></script>
   <script src="assets/javascript/controllers/UsersShowController.js"></script>
   <script src="assets/javascript/controllers/UsersIndexController.js"></script>
+
+  <!-- Filters -->
+<script src="assets/javascript/filters/categoryFilter.js"></script>
+
   <!-- Services -->
   <script src="assets/javascript/services/users.js"></script>
   <script src="assets/javascript/services/notes.js"></script>
