--- a/app/views/index.html
+++ b/app/views/index.html
@@ -25,6 +25,9 @@
   <script src="assets/javascript/vendor/angular.js"></script>
   <script src="assets/javascript/vendor/angular-route.js"></script>
   <script src="assets/javascript/vendor/angular-resource.js"></script>
+  <script src="assets/javascript/vendor/bootstrap.js"></script>
+  <script src="assets/javascript/vendor/ngGravatar.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/md5.js"></script>
 
   <!-- App -->
   <script src="assets/javascript/app.js"></script>
@@ -33,7 +36,8 @@
   <!-- Directives -->
   <script src="assets/javascript/directives/nwPageNav.js"></script>
   <script src="assets/javascript/directives/nwCategorySelector.js"></script>
-  
+    <script src="assets/javascript/directives/title.js"></script>
+
   <!-- Controllers -->
   <script src="assets/javascript/controllers/NotesCreateController.js"></script>
   <script src="assets/javascript/controllers/NotesEditController.js"></script>
